# python-rest-server

./: README.md  setup.cfg  setup.py  tox.ini
scripts/: curl_test.sh
src/app/: routes.py
src/microblog/: app.db  config.py  microblog.py
src/microblog/app/: __init__.py  models.py  routes.py
src/microblog/app/templates/: base.html
src/microblog/migrations/versions/: 934680cb4806_users_table.py  fb9050d0de65_posts_table.py
src/python_template/: template.py
tests/: test_microblog.py  test_template.py
